# ecg_denoising_pipeline_game

./: .gitignore  README.md  cli.ipynb  cli.py  pyproject.toml
ecg_pipeline/: __init__.py  config.py  index_map.py  io_utils.py  pipeline.py  plotting.py  steps.py
ecg_pipeline.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
example_data/: ecg_orig.npy  gaps_indices.json  pipeline_config.yaml
